# CookiecutterTemplates

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .dockerignore  .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCKERFILE  LICENSE  README.md  post-gen.sh  pyproject.toml
{{cookiecutter.project_name}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_name}}/.github/workflows/: pull_request_opened.yaml
{{cookiecutter.project_name}}/ml_app/: config.py  entrypoint.sh
{{cookiecutter.project_name}}/ml_app/app/: __init__.py
{{cookiecutter.project_name}}/ml_app/app/api/: routes.py
{{cookiecutter.project_name}}/ml_app/tests/: conftest.py  test_app.py
{{cookiecutter.project_name}}/modules/cli/jira/: issue_description.py
