[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["FabioCaffarello <fabio.caffarello@gmail.com>"]
maintainers = ["FabioCaffarello <fabio.caffarello@gmail.com>"]
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"

  [tool.poetry.dependencies]
  python = "^3.8"
  Flask = "^2.1.1"
  requests = "^2.27.1"
  python-dotenv = "^0.20.0"

  [tool.poetry.group.dev.dependencies]
  flake8 = "^4.0.1"
  pre-commit = "^2.17.0"
  pytest = "^7.1.1"
  pytest-flask = "^1.2.0"

  [tool.poetry.scripts]
  jira-issue-cli = "modules.cli.jira.issue_description:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
